--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,8 @@ edition = "2021"
 
 [dependencies]
 macroquad = "0.4.13"
+winit = "0.26.0"
+wgpu = "0.12.0"
+env_logger = "0.9"
+log = "0.4"
+pollster = "0.2"
