--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ env_logger = "0.11.5"
 log = "0.4"
 pollster = "0.4.0"
 bytemuck = { version = "1.7.0", features = ["derive"] }
+
+[dependencies.image]
+version = "0.25.5"
+default-features = false
+features = ["jpeg", "png"]
