--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ env_logger = "0.11.5"
 log = "0.4"
 pollster = "0.4.0"
 bytemuck = { version = "1.7.0", features = ["derive"] }
+cgmath = "0.18.0"
 
 [dependencies.image]
 version = "0.25.5"
