--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [package]
 name = "wasm_game_engine"
 version = "0.1.0"
 edition = "2021"
+
+[profile.release]
+strip = true
 
 [dependencies]
 anyhow = "1.0"
@@ -27,3 +33,19 @@ glob = "0.3"
 version = "0.25.5"
 default-features = false
 features = ["jpeg", "png"]
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook = "0.1.6"
+console_log = "1.0"
+wgpu = { version = "24.0.5", features = ["webgl"]}
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4.30"
+web-sys = { version = "0.3", features = [
+    "Document",
+    "Window",
+    "Element",
+]}
+
+ 
+
+ 
