--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ tobj = { version = "3.2", default-features = false, features = ["async"]}
 noise = "0.9.0"
 rand = "0.9.1"
 wgpu_text = "=0.9.2"
+web-time = "1.1.0"
 
 [build-dependencies]
 anyhow = "1.0"
@@ -44,8 +45,10 @@ web-sys = { version = "0.3", features = [
     "Document",
     "Window",
     "Element",
+    "Location",
+    "HtmlCanvasElement",
+    'console'
 ]}
-
- 
-
- 
+getrandom = { version = "0.3", features = ["wasm_js"] }
+reqwest = "0.12"
+web-time = "1.1.0"
